<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	
	<android.support.v7.widget.Toolbar
		android:id="@+id/client_toolbar"
		android:layout_width="match_parent"
		android:layout_height="?attr/actionBarSize"
		android:background="?colorPrimary"
		app:title="@string/client"
		app:titleTextColor="@android:color/white" />
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">
		
		<android.support.design.widget.TextInputEditText
			android:id="@+id/client_address_edit_text"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/server_ip_address" />
		
		<android.support.design.widget.TextInputEditText
			android:id="@+id/client_port_edit_text"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/server_port_number" />
		
		<Button
			android:id="@+id/client_get_radio_button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			android:text="@string/get_radio"
			android:textColor="@android:color/white"
			android:textStyle="bold" />
		
		<Button
			android:id="@+id/client_turn_off_network_button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/turn_off_network"
			android:textColor="@android:color/white"
			android:textStyle="bold" />
		
		<Button
			android:id="@+id/client_turn_on_network_button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/turn_on_network"
			android:textColor="@android:color/white"
			android:textStyle="bold" />
		
		<Button
			android:id="@+id/client_clear_button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/clear"
			android:textColor="@android:color/white"
			android:backgroundTint="@color/colorAccent"
			android:textStyle="bold" />
		
		<ScrollView
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			
			<TextView
				android:id="@+id/client_response_text_view"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
		
		</ScrollView>
	
	</LinearLayout>

</LinearLayout>