<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="20dp">
	
	<TextView
		android:id="@+id/landing_title"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:gravity="center"
		android:text="@string/socket_server_client"
		android:textSize="35sp"
		android:textStyle="bold" />
	
	<LinearLayout
		android:layout_below="@+id/landing_title"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_gravity="bottom"
		android:gravity="center"
		android:layout_centerInParent="true"
		android:orientation="vertical">
		
		<Button
			android:id="@+id/landing_layout_button_server"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@color/colorPrimary"
			android:text="@string/server"
			android:textAlignment="center"
			android:textColor="@android:color/white"
			android:textSize="16sp"
			android:textStyle="bold" />
		
		<Button
			android:id="@+id/landing_layout_button_client"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="15dp"
			android:background="@color/colorAccent"
			android:text="@string/client"
			android:textAlignment="center"
			android:textColor="@android:color/white"
			android:textSize="16sp"
			android:textStyle="bold" />
	
	</LinearLayout>

</RelativeLayout>